Correcciones v6, y se grego info a lo de estadistica

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
@@ -2,7 +2,7 @@
 ## Gramáticas de tipo 3
 
 Las gramáticas de tipo 3, también llamadas gramáticas regulares o lineales, son las gramáticas más restrictivas según la jerarquía de Chomsky, esto porque se restringe la forma en la que se pueden armar las reglas de producción, es decir, te dice como debe estar conformado el lado derecho como izquierdo de la regla de producción.
-Como se vio en [[2. Grámatica Formal]] de la unidad 1, hay dos tipos de gramáticas de tipo 3, lineales por derecha y por izquierda, a partir de cualquiera de estas dos, se puede obtener su equivalente, es decir, que si tenemos una lineal por derechas se puede obtener una equivalente por izquierda mediante un sencillo algoritmo.
+Como se vio en [[2. Gramática Formal]] de la unidad 1, hay dos tipos de gramáticas de tipo 3, lineales por derecha y por izquierda, a partir de cualquiera de estas dos, se puede obtener su equivalente, es decir, que si tenemos una lineal por derechas se puede obtener una equivalente por izquierda mediante un sencillo algoritmo.
 
 #### Algoritmo de Conversión
 
