--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
@@ -51,3 +51,6 @@ Las gramáticas de tipo 2, se pueden transformar en gramáticas equivalentes en 
 
 > $$P=\{(A::=aX) ó (S::=\lambda) / A \in Σ_N, X \in Σ^*_N, a \in Σ_T\}$$
 
+>[!note] Recomendación
+>Cuando se quiere transformar una gramática a la forma normal de Greibach, conviene primero convertirla a la forma normal de Chomsky y luego comenzar el proceso para que sea de la forma normal de Greibach. Haciendo esto nos ahorramos algunos pasos adicionales o muy tediosos.
+
