--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
@@ -14,7 +14,7 @@ Si $(p, x)$ $\in$ $\delta$$(q, a Z)$ con $p, q$ $\in$ $Q$, $a$ $\in$ $Σ$ $\cup$
 
 - $(q0,1100,A)├ (q0,100,1A)├ (q0,00,11A)├ (q1,0,1A)├ (q1,ε,A)├ (q1,ε,ε)$. 
 
-En los movimientos se ponen todos los pasos que se tienen que seguir para procesar la cadena.
+En los movimientos se ponen todos los estados por los que paso el autómata para poder procesar la cadena.
 
 ### Sucesión Movimientos
 
