--- a/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
@@ -1,45 +1,45 @@
 
 >[!important] Definición
->Un paradigma de programación es una colección de patrones conceptuales que modelan la forma de razonar sobre problemas, de formar algoritmos y de estrurar programas.
+>Un paradigma de programación es una colección de patrones conceptuales que modelan la forma de razonar sobre problemas, de formar algoritmos y de estructurar programas.
 >- Un lenguaje ***soporta*** un Paradigma, como es el caso de Haskell con el paradigma funcional.
 >- Un lenguaje ***edmite*** un Paradigma, como en el caso de Python que te permite escribir código como si estuvieras en un lenguaje funcional.
 
-son los metodos que orientan el proceso de programación de un componente o sistema.
+Son los métodos que orientan el proceso de programación de un componente o sistema.
 
 ### Clasificación
 
-- **Convencionales** -> son aquellos paradigmas cuyo principal caracteristica es que cuando se escribe un programa en estos lenguajes se deben especificar que es lo que se debe hacer en cada caso, estos son mas cercanos a la arquitectura de las computadoras. Ejemplos de esto son los paradigmas imperativo y orientado a objetos.
-- **No convencioanles** -> Son aquellos en la que las especificaciones de la resolución de los problemas se hace mediantes una serie de reglas, este tipo de paradigmas se caracteriza porque en las sentencia se declara que se tiene que hacer no el como se tiene que hacer. Ejemplo de estos paradigmas serian el paradigma declarativo o logico y el aplicativo o funcional.
+- **Convencionales** -> son aquellos paradigmas cuyo principal característica es que cuando se escribe un programa en estos lenguajes se deben especificar que es lo que se debe hacer en cada caso, estos son más cercanos a la arquitectura de las computadoras. Ejemplos de esto son los paradigmas imperativo y orientado a objetos.
+- **No convencionales** -> Son aquellos en la que las especificaciones de la resolución de los problemas se hace mediantes una serie de reglas, este tipo de paradigmas se caracteriza porque en las sentencias se declara que se tiene que hacer, no el cómo se tiene que hacer. Ejemplo de estos paradigmas serían el paradigma declarativo o lógico y el aplicativo o funcional.
 
  ---
 
 ## Paradigma Imperativo
 
-Los lenguajes que se encuentran dentro de este grupo se caracteriza por el tipo de sentencia con el que cuentan, ya que el código se ejecutara linea por linea una sentencia detras de otra a la vez que se le va asignando valores a  las variables y realizar operaciones entre ellas.
+Los lenguajes que se encuentran dentro de este grupo se caracteriza por el tipo de sentencia con el que cuentan, ya que el código se ejecutara línea por línea una sentencia detrás de otra a la vez que se le va asignando valores a  las variables y realizar operaciones entre ellas.
 
 >[!important] Conceptos Claves
 >- **Variables**: Son la representación abstracta de un espacio de memoria, en el cual vamos a almacenar la información.
->- **Ordenes**: Son los pasos que se realizaran para poder cumplir por una determinada tarea.
+>- **Órdenes**: Son los pasos que se realizaran para poder cumplir por una determinada tarea.
 >- **Proceso o Procedimiento**: Son porciones de código, que idealmente, se ocupan de realizar solo una tarea, estos mismos procesos son los que nos van a ayudar a modelar los problemas del mundo real.
->- **Abstracción de Datos**: Es un mecanismo mediante el cual podemos modelar estructuras del mundo real con mucha mas facilidad.
+>- **Abstracción de Datos**: Es un mecanismo mediante el cual podemos modelar estructuras del mundo real con mucha más facilidad.
 
-La sentencia de asignación es la mas caracteristica a este tipo de lenguajes, ademas de sus caracteristicos saltos condicionales y estructuras de control. Pero al mismo tiempo algo que los caracterizaba era que se ejecutaban de forma secuencial, es decir, el programa va a funcionar ejecutando valores uno detras de otro.
+La sentencia de asignación es la más característica a este tipo de lenguajes, además de sus característicos saltos condicionales y estructuras de control. Pero al mismo tiempo, algo que los caracterizaba era que se ejecutaban de forma secuencial, es decir, el programa va a funcionar ejecutando valores uno detrás de otro.
 
 >[!note] Evolución hacia la Abstracción de Datos
->En sus origenes los lenguajes que eran puramente imperativos no implementaban este concepto a la larga se comenzaron a introducir este concepto, devido a que facilitaba muchas cosas y solucionaba algunos de los problemas de los lenguajes putamente imperativos.
+>En sus orígenes los lenguajes que eran puramente imperativos no implementaban este concepto, a la larga se comenzaron a introducir este concepto, debido a que facilitaba muchas cosas y solucionaba algunos de los problemas de los lenguajes putamente imperativos.
 
 >[!note] Limitaciones
 >- **Dificultad para razonar**
 >	- Alta dependencia de la arquitectura
 >	- Una variable es una abstracción de una celda de memoria
->- **Tranparencia referencial**: En los lenguajes que implementan el paradigma imperativo no se puede reemplazar un valor de una variable global por otro similar ya que esto alteraria el comportameinto de todo el programa.
->- **Efectos colaterales y *aliasing***: se le denomina efectos colaterales o secundarios, cuando una función o expreción ademas de retornar un valor, modifica su entorno. Por ejemplo, modificación de una variable global o estatica, escritura en un archivo, etc.
->- **Accesibilidad vulnerable**: Los programas construidos en este paradigma por lo general hacian uso de variables globales que eran modificadas a medida que el código se iba ejecutando.
+>- **Transparencia referencial**: En los lenguajes que implementan el paradigma imperativo no se puede reemplazar un valor de una variable global por otro similar, ya que esto alteraría el comportamiento de todo el programa.
+>- **Efectos colaterales y *aliasing***: se le denomina efectos colaterales o secundarios, cuando una función o expresión, además de retornar un valor, modifica su entorno. Por ejemplo, modificación de una variable global o estática, escritura en un archivo, etc.
+>- **Accesibilidad vulnerable**: Los programas construidos en este paradigma por lo general hacían uso de variables globales que eran modificadas a medida que el código se iba ejecutando.
 >- **Estructura de control**.
 
 ## Paradigma Orientado a Objetos
 
-En primera instancia este paradigma fue pensado como una extención del paradigma imperativo, tratando de solucionar sus falencias, agregando herramientas que permitan escribir código reusable y ampliable.
+En primera instancia, este paradigma fue pensado como una extensión del paradigma imperativo, tratando de solucionar sus falencias, agregando herramientas que permitan escribir código reusable y ampliable.
 
 >[!important] Conceptos Claves
 >- **Objetos**: Los objetos nos proporcionan una forma natural de modelar entidades del mundo real. Está compuesto por atributos y métodos. Los componentes variables del objeto suelen ser privados, por lo que solo se pueden acceder a ellos mediante los métodos del mismo objeto (encapsulamiento).
@@ -84,16 +84,16 @@ La programación funcional pura no utiliza comandos o procedimientos propios que
 >	- **Operación de Aplicación**.
 >- ***Propiedades***
 >	- **Semántica de Valores**.
->	- **Transparencia Referencial**: Al contrario que en el paradigma imperativo y OO, en estos lenguajes todas las "variables" son inmutalbes, por lo que el retorno de nuestra funcion en realidad sera un nuevo dato totalmente distinto al que se le paso como parametro, mas no una modificación al dato como tal (si se trabaja con referencias), haciendo que no se produzcan efectos colaterales en la ejecución de los programas. Esto hace posible que se pueda sustituir el valor de retorno de una función por un valor similar sin afectar realmente la ejecución.
+>	- **Transparencia Referencial**: Al contrario que en el paradigma imperativo y OO, en estos lenguajes todas las "variables" son inmutables, por lo que el retorno de nuestra función en realidad será un nuevo dato totalmente distinto al que se le pasó como parámetro, más no una modificación al dato como tal (si se trabaja con referencias), haciendo que no se produzcan efectos colaterales en la ejecución de los programas. Esto hace posible que se pueda sustituir el valor de retorno de una función por un valor similar sin afectar realmente la ejecución.
 >	- **Funciones como valores de primera clase**.
 >	- **Evaluación Perezosa**: 
->		- *Estructura de datos conceptualemente infinitas*.
+>		- *Estructura de datos conceptualmente infinitas*.
 >		- *Costo computacional*
->	- **Curryng**: Composición de funciones mas complejas a traves de funciones simples. Es decir, el poder aplicar una función a otra función.
+>	- **Curryng**: Composición de funciones más complejas a través de funciones simples. Es decir, el poder aplicar una función a otra función.
 
-## Paradigma Logico
+## Paradigma Lógico
 
-Se basa el la lógica de predicción, se puede decir que un programa en este paradigma es un conjunto de hechos y de reglas lógicas previamente establecidas, apartir de la cual se obtienen concluciones.
+Se basa el la lógica de predicción, se puede decir que un programa en este paradigma es un conjunto de hechos y de reglas lógicas previamente establecidas, a partir de la cual se obtienen conclusiones.
 
 >[!important] Conceptos Clave
 >- **Aserciones**: Son conjunto de hechos tales que establecen una relación entre objetos, siendo esta una forma más sencilla de sentencia. Una verdad.
@@ -112,7 +112,7 @@ Luego de esto se inicia el proceso de ***Backtracking***, el cual, es explotado 
 
 ## Multiparadigma
 
-En muchas ocaciones un lenguaje que abarca solo un paradigma no es suficiente para resolver un problema, debido a las limitantes que puede llegar a tener para resolver una determinado problema en el proceso de creación del software, por eso se comenzo a abarajar el concepto de un ***lenguaje multiparadigma***.
+En muchas ocasiones un lenguaje que abarca solo un paradigma no es suficiente para resolver un problema, debido a las limitantes que puede llegar a tener para resolver un determinado problema en el proceso de creación del software, por eso se comenzó a barajar el concepto de un ***lenguaje multiparadigma***.
 A la hora de crear lenguajes multiparadigmas, se tiene en cuenta la forma de resolver los problemas de un solo paradigma en particular y crear un estilo que permita combinarlos de forma que este sea cómodo a la hora de tratar de resolver un problema.  Están creados para resolver problemas complejos, cuyos subproblemas se pueden resolver de mejor manera con un determinado paradigma en particular.
 Se caracteriza por brindar las mejores herramientas de cada tipo de paradigma, permitiendo resolver un mayor rango de problemas, ayudan a conseguir las soluciones más eficientes, facilitan el aprendizaje de nuevos algoritmos y aumentar la rentabilidad de los proyectos.
 
