--- a/3° Año/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
@@ -1,85 +1,85 @@
 
 ## Planificación y Diseño del Lenguaje
 
-A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese proncipio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación para que se lo desee crear comenzaremos a diseñar el lenguaje.
+A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese principio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación para que se lo desee crear comenzaremos a diseñar el lenguaje.
 Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de **abstracción de datos** y **empaquetado**, es decir, la posibilidad de poder usar código ya previamente testeado y construido, sin tener que volver a escribirlo.
 
 ## Principios para un buen Diseño
 
-1. **Simplicidad**: Propiedad del diseño determinada por el número de componentes básicos, la minimalidad de los conceptos y la consistencia de sus estructuras. En caso de los lenguajes multiproposito, cuando se construye un programa con estos el programador que hace uso de ellos debe conocer las caracteristicas con las que va a resolver el problema, evitando el choque con otras funcionalidades que no domina en su totalidad.
+1. **Simplicidad**: Propiedad del diseño determinada por el número de componentes básicos, la minimalidad de los conceptos y la consistencia de sus estructuras. En caso de los lenguajes multiproposito, cuando se construye un programa con estos, el programador que hace uso de ellos debe conocer las características con las que va a resolver el problema, evitando el choque con otras funcionalidades que no domina en su totalidad.
 
 >[!note] Para tener en Cuenta
 >El diseñador del lenguaje no debe estar preocupado por las nesecidades del programador, en caso de que el programador necesite una funcionalidad x es más sencillo darle las herramientas para que el la cree o porque no importar una libreria que agregue esas funcionalidades o que extienda otras funcionalidades.
 >- Un ejemplo de simplicidad es el lenguaje Java que solo cuenta con 50 palabras reservadas como tal, y el por separado SDK con un conjunto de clases ya construidas en base a esas palabras.
 
-2. **Expresibilidad**: Es la capacidad con la que cuenta el lenguaje para expresar procesos y estructuras mas complejas de la manera mas natural posible, es decir, se debe poder modelar el programa con la mayor naturalidad posible, junto al dominio del problema. Muchas veces esta caracteristica puede chocar con la ***Simplicidad***.
+2. **Expresividad**: Es la capacidad con la que cuenta el lenguaje para expresar procesos y estructuras más complejas de la manera más natural posible, es decir, se debe poder modelar el programa con la mayor naturalidad posible, junto al dominio del problema. Muchas veces esta característica puede chocar con la ***Simplicidad***.
 
 >[!note] A Tener en Cuenta
 >En este punto va a desatacar o resaltar con que fin fue contruido el lenguaje de programación, es decir para que dominio de problema se creo dicho lenguaje.
 
-3. **Seguridad**: No debe dar posibilidad a la escritura de programa defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir codigo erroneo o inseguro. Al mismo tiempo a mayor seguridad se le agregue al lenguaje mas afecta la expresibidad y extencibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
-4. **Regularidad**: Como deben convinarse o relacionarse los conceptos en el mismo lenguaje, para lograr la maxima potencia con un numero limitado de sentencias. Muchas veces este concepto se puede dividir en tres: 
-	- **Generalidad**: Se refiere a la capasidad que tiene el lenguaje de brindarte de base los tipos de datos parametrizados o genericos.
-	- **Ortogonalidad**: Se refiere a tener la posibilidad de convinar las distintas caracteristicas de este mismo a la hora de la resolución de un programa. De tal manera que no se genere ningun resultado inesperado.
-	- **Uniformidad**: Las cosas que son similares deben tener resultados similares y verse similares y viceversa, es decir, si un metodo requiere que se le pase un parametro entero, todas las veces que se le invoque debe pasarse como parametro un entero obligatoriamente o en el caso de las estructuras/sentencias, siempre deben escribirse de la misma manera.
-5. **Robustez**: La habilidad de un lenguajes para reducir la cantidad de errores en tiempo de ejecución.
+3. **Seguridad**: No debe dar posibilidad a la escritura de programas defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir código erróneo o inseguro. Al mismo tiempo, a mayor seguridad se le agregué al lenguaje, más afecta la expresividad y extensibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
+4. **Regularidad**: Como deben combinarse o relacionarse los conceptos en el mismo lenguaje, para lograr la máxima potencia con un número limitado de sentencias. Muchas veces este concepto se puede dividir en tres: 
+	- **Generalidad**: Se refiere a la capacidad que tiene el lenguaje de brindarte de base los tipos de datos parametrizados o genéricos.
+	- **Ortogonalidad**: Se refiere a tener la posibilidad de combinar las distintas características de este mismo a la hora de la resolución de un programa. De tal manera que no se genere ningún resultado inesperado.
+	- **Uniformidad**: Las cosas que son similares deben tener resultados similares y verse similares y viceversa, es decir, si un método requiere que se le pase un parámetro entero, todas las veces que se le invoque debe pasarse como parámetro un entero obligatoriamente o en el caso de las estructuras/sentencias, siempre deben escribirse de la misma manera.
+5. **Robustez**: La habilidad de un lenguaje para reducir la cantidad de errores en tiempo de ejecución.
 
 >[!note] A Tener en Cuenta
-> - Si un lenguaje posee rebustez quiere decir que por mas que se produzca un error este es predecible y manejable.
-> - No confundir Robustez con Seguridad, éste ultima se refuere a herramientas que te da el lenguaje para escribir codigo mas fiable, en cambio la robustez es algo que se mide en tiempo de ejecución. Ejemplo: Python es un lenguaje inseguro pero es robusto porque te deja manejar las excepciones que se produzcan durante ejecución.
+> - Si un lenguaje posee robustez quiere decir que por más que se produzca un error este es predecible y manejable.
+> - No confundir Robustez con Seguridad, éste última se refiere a herramientas que te da el lenguaje para escribir código más fiable, en cambio, la robustez es algo que se mide en tiempo de ejecución. Ejemplo: Python es un lenguaje inseguro, pero es robusto porque te deja manejar las excepciones que se produzcan durante ejecución.
 
-6. **Flexibilidad**: Facilidad que permite que un mismo programa pueda realizar variaciones sobre una misma entidad sin necesidad de realizar modificaciones. Por ejemplo el *tiempo de ligadura* es algo que compromete la flexibilidad, es decir, mientras mas estricto es en su tipado mas flexibilidad pierde.
+6. **Flexibilidad**: Facilidad que permite que un mismo programa pueda realizar variaciones sobre una misma entidad sin necesidad de realizar modificaciones. Por ejemplo, el *tiempo de ligadura* es algo que compromete la flexibilidad, es decir, mientras más estricto es en su tipado más flexibilidad pierde.
 
 >[!note] A Tener en Cuenta
 >Los lenguajes que deseen tener mas flexibilidad estan forzados a perder seguridad, el mejor ejemplo de esto son los lenguajes interpretados.
 
 7. **Eficiencia**: Principio que refleja o relación entre los recursos utilizados y los objetivos conseguidos. 
-	- **Costo-Beneficio**: Se debera analizar el dominio del problema que se intenta resolver en dicho lenguaje y a su vez su expresibidad, para ver si éste nos brinda la eficiencia que nosotros estamos buscando para esa aplicacion.
+	- **Costo-Beneficio**: Se deberá analizar el dominio del problema que se intenta resolver en dicho lenguaje y a su vez su expresividad, para ver si éste nos brinda la eficiencia que nosotros estamos buscando para esa aplicación.
 	- **Eficiencia de la implementación**: Relacionado a los esfuerzos necesarios para escribir un traductor para ese lenguaje.
-	- **Eficiencia del código**: Debe brindar facilidades para que un traductor pueda crear código ejecutable de manera eficiente, esto se puede hacer mediante un transpilador o utilizando el tipado estatico por sobre el dinamico.
-	- **Eficiencia de la traducción**: Debe permitir que el código fuente se traduzca a código objeto de manera rapida y al mismo tiempo poseer un tamaño razonable. Esto se puede lograr por ejemplo exigiendo que las variables que se vayan a utilizar sean declaradas de antemano.
-	- **Eficiencia de la programación**: Esta relacionado a la facilidad de escritura del lenguaje y su exprecibidad, a través de una sintaxis consisa y la no declaración de las variables antes de su uso.
+	- **Eficiencia del código**: Debe brindar facilidades para que un traductor pueda crear código ejecutable de manera eficiente, esto se puede hacer mediante un transpilador o utilizando el tipado estático por sobre el dinámico.
+	- **Eficiencia de la traducción**: Debe permitir que el código fuente se traduzca a código objeto de manera rápida y al mismo tiempo poseer un tamaño razonable. Esto se puede lograr, por ejemplo, exigiendo que las variables que se vayan a utilizar sean declaradas de antemano.
+	- **Eficiencia de la programación**: Está relacionado a la facilidad de escritura del lenguaje y su expresividad, a través de una sintaxis concisa y la no declaración de las variables antes de su uso.
 
 >[!note] Aclaración
 >Cada lenguaje debe proporcionar una implementación aceptablemente eficiente, que es variara de acuerdo al dominio de aplicación.
 
 8. **Reusabilidad**: Propiedad que permite que un componente de software pueda ser utilizado en otras aplicaciones. Los conceptos que se deben incluir en un lenguaje para que esto se cumpla es a través de:
-	- Unidades Genericas.
+	- Unidades Genéricas.
 	- Abstracción de Datos.
-	- Polimorfismo Parametrico.
+	- Polimorfismo Paramétrico.
 	- Abstracción de Proceso.
-	- Polimorfismo por Inclución.
+	- Polimorfismo por Inclusión.
 9. **Extensibilidad**: Posibilidad de adicionar o realizar cambios con respecto de las especificaciones iniciales. Para que cumpla con esta propiedad en dicho lenguaje se debe poder:
 	- Heredar.
 	- Modularizar.
 	- Añadir nuevas palabras claves y constructores.
 	- Definir nuevos tipos de datos.
 	- Añadir nuevas funciones a una librería.
-10. **Portabilidad**: Habilidad para compilar código y ejecutarlo en distintas plataformas sin la necesidad de realizar combios a la hora de su puesta en marcha. Para esto los deben contar con una ***Estandarización*** y una ***Independencia del Hardware***.
+10. **Portabilidad**: Habilidad para compilar código y ejecutarlo en distintas plataformas sin la necesidad de realizar cambios a la hora de su puesta en marcha. Para esto los deben contar con una ***Estandarización*** y una ***Independencia del Hardware***.
 
 ---
 
 ## Estandarización
 
-Un lenguaje que esta estandarizado le brinda mucha mas validez al código que esta escrito con dicho estandar. Existen dos tipos de estandares:
+Un lenguaje que está estandarizado le brinda mucha más validez al código que está escrito con dicho estándar. Existen dos tipos de estándares:
 
-1. El ***patentado*** que son aquellos estandares que brindan o reespaldan empresas privadas.
-2. Los por ***concenso***, en este caso un grupo de organizaciones constituidas por grupos de desarrolladores e ingenieros escriben una serie de normas a las que se deben apegar los distintos lenguajes que quieran estandarizarse.
+1. El ***patentado*** que son aquellos estándares que brindan o respaldan empresas privadas.
+2. Los por ***consenso***, en este caso un grupo de organizaciones constituidas por grupos de desarrolladores e ingenieros, escriben una serie de normas a las que se deben apegar los distintos lenguajes que quieran estandarizarse.
 
 #### Consideraciones Importantes
 
-Para utilizar los estandares de forma eficaz, es necesario ocuparse de tres cuestiones:
-1. Oportunidad. ¿Cuando estandarizar un lenguaje?
-2. Conformidad. ¿Que significa que un programa se adhiere a un estandar y que un compilador compila un estandar?
-3. Obsolescencia. ¿Cuando envejece un estandar y como se modifica?
+Para utilizar los estándares de forma eficaz, es necesario ocuparse de tres cuestiones:
+1. Oportunidad. ¿Cuándo estandarizar un lenguaje?
+2. Conformidad. ¿Qué significa que un programa se adhiere a un estandar y que un compilador compila un estándar?
+3. Obsolescencia. ¿Cuándo envejece un estándar y como se modifica?
 
-A continuacion se considera cada una de las preguntas.
+A continuación se considera cada una de las preguntas.
 
-- **Oportunidad**: Lo deseable seria estandarizar un lenguaje lo suficiente pronto para que exista suficiente experiencia en el uso del lenguaje, pero no demasiado tarde, para no alentar muchas implementaciones incompatibles.
-- **Conformidad**: Si existe un estandar para un lenguaje, se suele hablar de conformidad con respecto a ese estandar. Un programa es conforme si solo utiliza caracteristicas definidas en el estandar. Un compilador conformable es uno que, cuando se le da un programa conforme, produce un programa ejecutable que genera la salida correcta. Observese que esto nada dice acerca de extensiones del estandar. Si un compilador agrega caracteristicas adicionales, entonces cualquier programa que las utilice no es conformado, y el estandar no dice nada acerca de cuales deberan ser los resultados del computo.
+- **Oportunidad**: Lo deseable sería estandarizar un lenguaje lo suficiente pronto para que exista suficiente experiencia en el uso del lenguaje, pero no demasiado tarde, para no alentar muchas implementaciones incompatibles.
+- **Conformidad**: Si existe un estándar para un lenguaje, se suele hablar de conformidad con respecto a ese estándar. Un programa es conforme si solo utiliza características definidas en el estándar. Un compilador conformable es uno que, cuando se le da un programa conforme, produce un programa ejecutable que genera la salida correcta. Obsérvese que esto nada dice acerca de extensiones del estándar. Si un compilador agrega características adicionales, entonces cualquier programa que las utilice no es conformado, y el estándar no dice nada acerca de cuáles deberán ser los resultados del cómputo.
 
 >[!important] Conformidad de un Lenguaje
->- Un programa ***conforme*** es aquel que solo utiliza caracteristicas descriptas en el estandar
->- Un ***compilador conformable*** es aquel que tome un programa conforme y produzca un programa ejecutable que genrera la salida correcta.
+>- Un programa ***conforme*** es aquel que solo utiliza características descritas en el estándar
+>- Un ***compilador conformable*** es aquel que tome un programa conforme y produzca un programa ejecutable que genere la salida correcta.
 
-- **Obsolescencia**: Conforme nuestro conocimiento y experiencia en la programación evolucionan, las nuevas arquitecturas de computadora requieren nuevas caracteristicas para los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años despues. El proceso de estandarizacion ya toma parte de esto en cuenta. Los estandares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema con la actualización de un estandar, es que hacer con la colección existente de programas escritos para el estandar antiguo. Por esta razon, casi todos los estandares requieren compatibilidad hacia atras; el nuevo estandar debe incluir versiones mas antiguas del lenguaje.
+- **Obsolescencia**: Conforme nuestro conocimiento y experiencia en la programación evolucionan, las nuevas arquitecturas de computadora requieren nuevas características para los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años después. El proceso de estandarización ya toma parte de esto en cuenta. Los estándares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema con la actualización de un estándar, es que hacer con la colección existente de programas escritos para el estándar antiguo. Por esta razón, casi todos los estándares requieren compatibilidad hacia atrás; el nuevo estándar debe incluir versiones más antiguas del lenguaje.
