--- a/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -8,7 +8,7 @@ Partiendo de la base de que un lenguaje de programación es un conjunto de notac
 >**Lexemas**: unidades sintácticas de más bajo nivel. Por Ej.: ***+,  /,  else,  begin,  end, contador,  suma,  etc***.
 >**Token**: categoría a la que pertenece un lexema. Por Ej.: identificadores, símbolos_de_operador, etc. véase con más claridad en el siguiente cuadro:
 >
-> <span class="centerImg"> ![[LP-sintaxis.png]] </span>
+> ![[LP-sintaxis.png]]
 > 
 > - **Aclaración: Identificador es lo mismo que decir variable.**
 
@@ -25,7 +25,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Lenguajes de Programación y Legibilidad
 >La legibilidad se mejora a través de características de lenguaje tales como formatos naturales de enunciado, enunciados estructurados, uso abundante de palabras clave y palabras pregonadas, recursos para comentarios incrustados, identificadores de longitud sin restricción, símbolos mnemotécnicos de operadores, formatos de campo libre y declaraciones completas de datos.
 
-- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. Las convenciones sintácticas implícitas, por ejemplo, permiten dejar sin especificar declaraciones y operaciones, haciendo que los programas mas más cortos y fáciles de escribir, pero dificultan su lectura.
+- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. Las convenciones sintácticas implícitas, por ejemplo, permiten dejar sin especificar declaraciones y operaciones, haciendo que los programas más más cortos y fáciles de escribir, pero dificultan su lectura.
 
 >[!note] Nota
 >Una sintaxis es ***redundante*** si comunica el mismo elemento de información en más de una forma. Cierta redundancia es útil en la sintaxis de lenguajes de programación porque facilita la lectura del programa y también permite revisar en busca de errores durante la traducción. La desventaja es que la redundancia hace a los programas más elocuentes y, por tanto, dificulta su escritura.
@@ -76,7 +76,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 5. **Comentarios:** La inclusión de comentarios en un programa es una parte importante de su documentación. Un lenguaje puede permitir comentarios de varias maneras:
 	1. Renglones de comentarios por separado en el programa, como FORTRAN.
 	2. Delimitados por marcadores especiales, los  {- y  -} de Haskell sin que importen los límites de renglón.
-	3. Comenzando en cualquier punto de un renglón pero ya concluidos al final del mismo, como el -- en Ada, // en C++.
+	3. Comenzando en cualquier punto de un renglón pero ya concluidos al final del mismo, como -- en Ada, o // en C++.
 
 >[!info] Información Extra
 >La tercera alternativa incluye a la primera y también permite introducir un comentario breve después del enunciado o declaración en un renglón. La segunda alternativa tiene la desventaja de que la falta de un delimitador de conclusión en un comentario transforma los enunciados siguientes (hasta el final del siguiente comentario) en “comentarios”, de modo que, aunque parezcan correctos al leer el programa, de hecho no se traducen ni se ejecutan.
@@ -94,8 +94,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 
 Cuando dos construcciones difieren solo a nivel léxico, tienen la misma ***sintaxis abstracta***, pero difieren con respecto a su ***sintaxis concreta***.
 Cuando hablamos de sintaxis abstracta nos referimos al significado que tiene una sentencia o el uso común que se le da a la misma. Mientras que si hablamos de sintaxis concreta nos referimos a la forma en la que se escribe dicha sentencia de forma válida para cada lenguaje. Por Ej:
-
-<span class="centerImg"> ![[LP-sintaxis2.png]] </span>
+ ![[LP-sintaxis2.png]]
 
 Como podemos observar, tanto el código escrito en C como el escrito en Pascal significan, a nivel de usabilidad, lo mismo, pero difieren en la forma de escribir cada una de esas sentencias.
 
@@ -104,4 +103,4 @@ Como podemos observar, tanto el código escrito en C como el escrito en Pascal s
 
 ## Métodos Formales para Describir la Gramática de un Lenguaje
 
-Véase la parte de "**Notación formal para describir una gramática**" en [[2. Grámatica Formal]] de la materia, autómatas y lenguajes formales.
+Véase la parte de "**Notación formal para describir una gramática**" en [[2. Gramática Formal]] de la materia, autómatas y lenguajes formales.
