--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -1,4 +1,4 @@
-<span class="centerImg"> ![[LP-composicion-programa.png]] </span>
+ ![[LP-composicion-programa.png]]
 
 Podemos decir que un programa está compuesto por entidades, dichas entidades pueden ser variables, subprogramas o sentencias; a su vez estas entidades constan de atributos, tales como nombre, valor, tipo, locación de memoria, parámetros formales y reales, acción que se le asigna.
 Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en caso de una sentencia, uno de sus atributos pueden ser variables que se están sumando o incluso subprogramas al que se le asignara su retorno a una variable.
@@ -59,8 +59,8 @@ Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***
 
 Para entender mucho mejor este concepto veamos el siguiente ejemplo:
 
-<span class="centerImg"> ![[LP-conceptos-variables-constantes.png]] </span>
+![[LP-conceptos-variables-constantes.png]]
 
 ## Estructura General de un Programa
 
-<span class="centerImg"> ![[LP-estructura-programas.png]] </span>
+![[LP-estructura-programas.png]]
