--- a/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y Constantes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y Constantes.md
@@ -3,7 +3,7 @@
 
 Es una abstracción de una celda de memoria. Es un objeto cuyo valor almacenado cambia durante la ejecución, esto se logra mediante las sentencias de asignación, la cual realiza una modificación destructiva de su valor.
 
-<span class="centerImg"> ![[LP-variable.png]] </span>
+ ![[LP-variable.png]]
 
 En sí podríamos decir que los atributos principales de una variable serían su ***nombre, valor y dirección de memoria***.
 
@@ -11,7 +11,7 @@ En sí podríamos decir que los atributos principales de una variable serían su
 
 Es un objeto que está enlazado permanentemente a un valor. Estas no posee el atributo de locación.
 
-<span class="centerImg"> ![[LP-constante.png]] </span>
+![[LP-constante.png]]
 
 Existen dos tipos de constantes:
 
