--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -25,7 +25,7 @@ A su vez, existen dos técnicas para localizar las entidades no locales al méto
 >Antes de entrar en detalle de como funciona cada método, es importante aclarar un par de conceptos importantes para las reglas de alcance estáticas:
 >- **Profundidad Estática**: Es un número asociado con el enlace estático, su valor indica la profundidad en la que se encuentra un bloque o procedimiento de su antecesor más lejano.
 >
-><span class="centerImg"> ![[LP-prof-est.png]] </span>
+> ![[LP-prof-est.png]]
 >
 >- **Desplazamiento de Cadena o Nivel de Anidamiento**: Es la diferencia entre la profundidad estática de la referencia a la entidad y la del ámbito en donde está declarada.
 >- **Desplazamiento Local**: Es la cantidad de celdas de memoria de la instancia de registro de activación que se tienen que recorrer para llegar a la entidad deseada.
@@ -37,9 +37,8 @@ A su vez, existen dos técnicas para localizar las entidades no locales al méto
 
 Es una cadena de enlaces estáticos que vincula instancias de registro de activación en la pila. En este modelo, la dirección en la que se encuentra una entidad no local está compuesta por el siguiente par -> ***(Desplazamiento de Cadena, Desplazamiento Local)***, en el siguiente ejemplo:
 
-<span class="centerImg"> ![[LP-alc-est-ej1.png]] </span>
-
-<span class="centerImg"> ![[LP-alc-est-ej2.png]] </span>
+ ![[LP-alc-est-ej1.png]]
+ ![[LP-alc-est-ej2.png]]
 
 >[!important] Explicación del Ejemplo
 >En el siguiente código podemos ver como todos los distintos subprogramas están anidadas y todas las entidades declaradas dentro de ellos, a continuación en la segunda imagen se ve el CallStack de un programa, como se puede ver en la llamada al subprograma ***sub3*** este va a buscar las variables no locales a él a su padre estático, y en caso de no encontrarlo irá recorriendo todos sus ancestros hasta llegar a la variable que busca. Es importante aclarar que si un subprograma es llamado y necesita buscar variables que no se encuentran localmente y su padre estático no se encuentra cargado en el CallStack, ocurrirá un error en la ejecución.
@@ -69,8 +68,7 @@ Al contrario que las reglas de alcance estáticas, las dinámicas se resuelven e
 #### Acceso Profundo
 
 Las referencias de las variables no locales se encuentran buscando en las instancias de registro de activación en la cadena dinámica. A diferencia de la ***Cadena Estática,*** la longitud de la cadena no puede ser determinada estáticamente y además, debido a que se resuelve todo en ejecución, la *IRA* debe tener almacenada el nombre de las variables. Véase en el Ejemplo:
-
-<span class="centerImg"> ![[LP-acc-prof-ej1.png]] </span>
+ ![[LP-acc-prof-ej1.png]]
 
 >[!note] Nota
 >En este caso al ser dinámico todos los padres de los subprogramas son los subprogramas que lo llamaron, esto significa que la búsqueda de las entidades bajando los sucesivas instancias de registro de activación hasta encontrarse con la entidad que necesita para la ejecución.
@@ -82,9 +80,9 @@ En nombre de las variables no están almacenadas en las instancias de registro d
 1. Crear una pila para cada nombre de variable, lo cual es muy costoso.
 2. Crear una tabla central, en donde exista una entrada para cada nombre de variable, Lo que es mucho más rápido.
 
-<span class="centerImg"> ![[LP-acc-sup-ej1.png]] </span>
+ ![[LP-acc-sup-ej1.png]]
 
-<span class="centerImg"> ![[LP-acc-sup-ej2.png]] </span>
+![[LP-acc-sup-ej2.png]]
 
 >[!note] Aclaración del Ejemplo
 >Las imágenes refieren a un programa que implementa el segundo método.
