--- a/3° Año/Lenguajes de Programación/Unidad 4/2. Abstracción de Datos y Tipos Primitivos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/2. Abstracción de Datos y Tipos Primitivos.md
@@ -7,7 +7,7 @@
 >- Confiabilidad
 >- Extensibilidad
 
-Es un mecanismo que nos permite dividir un problema en problemas más simples en base a la identificación de los datos. Permitiéndonos definir interfaces de acceso para cada una de las partes, oscureciendo o encapsulando la implementación de los tipos de datos, de modo tal que la interface actúe como especificación para el sistema.
+Es un mecanismo que nos permite dividir un problema en problemas más simples en base a la identificación de los datos. Permitiéndonos definir interfaces de acceso para cada una de las partes, oscureciendo o encapsulando la implementación de los tipos de datos, de modo tal que la interfaz actúe como especificación para el sistema.
 
 >[!important] Concepto de Objeto de Datos
 >El concepto ***objeto de dato*** se utiliza para referirse a un agrupamiento de uno o más datos de una máquina virtual. Estos objetos de datos y sus interrelaciones cambian dinámicamente durante la ejecución del programa.
@@ -30,7 +30,7 @@ Un tipo de dato representa un conjunto de valores válidos para ese tipo y un co
 Podemos clasificar a los tipos de datos de un lenguaje de programación de acuerdo a dos puntos de vista diferentes, por un lado, según su origen, encontraremos a los ***predefinidos por el lenguaje***, también conocidos como tipos primitivos, y los ***definidos por el usuario***.
 Por otra parte, desde el punto de vista de su complejidad se pueden clasificar en:
 1. **Primitivos**: son los conceptos atómicos que se manejan en un programa y que generalmente tienen una representación directa en hardware. Por Ej.: integer, byte, char, boolean, float.
-2. **Derivados**: Son aquellos tipos que se construyen a partir de establecer restricciones sobre los tipos primitivos. Por Ej.: los enumerados y sub rangos de Pascal. Esto dota al lenguaje con mayor legibilidad y seguridad
+2. **Derivados**: Son aquellos tipos que se construyen a partir de establecer restricciones sobre los tipos primitivos. Por Ej.: los enumerados y subrangos de Pascal. Esto dota al lenguaje con mayor legibilidad y seguridad
 3. **Estructurados**: Se conforman como agregación de varios componentes de uno o varios tipos. Por Ej.: string en C++, struct de C++ , set en Pascal, record de Pascal.
 4. **Recursivos**: Son aquellos tipos estructurados que al menos uno de sus componentes es del mismo tipo.
 5. **Clases**: Son aquellos tipos de datos a los que se le puede definir un conjunto de valores válidos y comportamiento.
