--- a/3° Año/Lenguajes de Programación/Unidad 4/3. Evolución del Concepto de Tipo de Dato.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/3. Evolución del Concepto de Tipo de Dato.md
@@ -1,5 +1,4 @@
-
-<span class="centerImg"> ![[LP-evolución-tipo-datos.png]] </span>
+ ![[LP-evolución-tipo-datos.png]]
 
 ### Encapsulamiento y Modularización
 
@@ -38,5 +37,4 @@ Un lenguaje de programación permitirá la definición de tipos de datos abstrac
 - Genera código portable.
 
 Los mecanismos que normalmente se usan para poder cumplir con todos estos objetos son por lo general las Clases, los Paquetes y los tipos de datos parametrizados o comúnmente llamado Genéricos.
-
 
