--- a/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
@@ -57,18 +57,18 @@ Para la planificación existen módulos del Sistema Operativo que eligen un proc
 	- Es una política predecible.
 	- Los procesos largos hacen esperar a los cortos.
 
-<span class="centerImg"> ![[SO-FCFS.png]] </span>
+![[SO-FCFS.png]]
 
 - **Shortest Job First (SJF)**: Toma de la cola de procesos listos el que necesite menos tiempo de ejecución para realizar su trabajo. El tiempo de ejecución de un proceso se puede saber por el propio programa, por usuario o ejecución anterior. Si dos procesos tienen el mismo tiempo de ejecución, se desempatan usando el método FCFS. Características:
 	- Es injusta con procesos largos.
 	- Es poco predecible.
 	- Difícil puesta en práctica por la información que necesita.
 
-<span class="centerImg"> ![[SO-SJF.png]] </span>
+![[SO-SJF.png]]
 
 - **Shortest Remaining Time First (SRTF)**: Cambia el proceso que está en ejecución, cuando llega un proceso con una exigencia más corta en el tiempo de ejecución de lo que resta para finalizar al proceso en ejecución. Es una mejora del SJF. Características:
 	- Es muy eficiente.
 	- Excelente tiempo medio de servicio.
 	- Puede ser injusta, ya que un proceso corto puede sacar a uno largo que esté ejecutándose y tal vez terminándose.
 
-<span class="centerImg"> ![[SO-SRTF.png]] </span>
+![[SO-SRTF.png]]
