--- a/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
@@ -4,13 +4,13 @@
 >[!check] Definición segun el Campo de Estudio
 >Un lenguaje de programación es un sistema de notaciones que nos sirve para describir computaciones (operaciones) de una forma legible y entendible tanto para la maquina como para el ser humano
 
-Estos mismos lenguajes se pueden clasificar segun su nivel, su jerarquia, la forma de programar con estos mismos y la manera en la que se realizan las instrucciones.
+Estos mismos lenguajes se pueden clasificar según su nivel, su jerarquia, la forma de programar con estos mismos y la manera en la que se realizan las instrucciones.
 
 ---
 
 ### Los Lenguajes de Programación en el Proceso de Desarrollo de Software.
 
-Teniendo en cuenta la siguiente metodología de diceño:
+Teniendo en cuenta la siguiente metodología de diseño:
 
 1. Especificación y Análisis de Requerimientos.
 2. ***Diseño de Software***.
@@ -18,26 +18,26 @@ Teniendo en cuenta la siguiente metodología de diceño:
 4. Verificación y Evaluación.
 5. Mantenimiento
 
-Si bien a dia de hoy no se utiliza mas esta metodología y se opta por otras mas enfocada en el desarrollo rapido, lo que nos interesa recalcar aqui es que una vez se sabe que es lo que quiere el usuario y se comienza a diseñar el software, recien cuando nosotros estemos por finalizar el diseño ahi elegiremos el lenguaje o lenguajes de programación mas indicados para la construcción del sistema, si bien recien en la implementación es donde toma importancia el lenguaje como tal no debemos olvidar que este es seleccionado todavia en la parte de diseño.
+Si bien a día de hoy no se utiliza más esta metodología y se opta por otras más enfocada en el desarrollo rápido, lo que nos interesa recalcar aquí es que una vez se sabe que es lo que quiere el usuario y se comienza a diseñar el software, recién cuando nosotros estemos por finalizar el diseño ahí elegiremos el lenguaje o lenguajes de programación más indicados para la construcción del sistema, si bien recién en la implementación es donde toma importancia el lenguaje como tal no debemos olvidar que este es seleccionado todavía en la parte de diseño.
 
 ---
 
 ### Lenguajes de Programción y Arquitectura de las Computadoras
 
-No devemos olvidarnos de que los lenguajes de programación estan limitados por la arquitectura de los equipos, la cual sigue siendo la ***arquitectura Von Neumann***, otra limitación es la capacidad con la que cuenta la maquina.
+No debemos olvidarnos de que los lenguajes de programación están limitados por la arquitectura de los equipos, la cual sigue siendo la ***arquitectura Von Neumann***, otra limitación es la capacidad con la que cuenta la máquina.
 
 >[!Important] El intermediario entre Humano y Maquina
 >Los lenguajes de programación son intermediarios entre el humano y la maquina, ya que este mismo nos proporciona sintaxis entendibles para el humano y que le permite escribir código claro para los usuarios, luego que el programador escribe todo el código, este debe pasar por un "traductor" que convierta todas esos enunciados en algo entendible por la maquina, estos traductores pueden ser ***compiladores o interpretes***, depende la forma del lenguaje.
 >A mayor abstracción posea el lenguaje mas difícil es para la maquina entenderlo y mas complejos deben ser sus compiladores o interpretes, y a menor abstracción mas sencillo es para la maquina entenderlos.
 
-siguiendo con el tema de la abstracción los lenguajes nos brindas disntintos niveles de a acuerdo a dos topicos: ***Abstracción de datos y Abstracción de Control***.
+Siguiendo con el tema de la abstracción, los lenguajes nos brindas distintos niveles de a acuerdo a dos tópicos: ***Abstracción de datos y Abstracción de Control***.
 
 <span class="centerImg"> ![[LP-abstraccion.png]] </span>
 
 ### Perspectiva Histórica
 
-En sus principios los lenguajes de progamación eran creados solo para resolver un solo problema y luego de eso se paraba su desarrollo y su uso, esto se devia a que el mismo creador del lenguaje era el unico o uno de los pocos que lo utilizaba para resolver un determiado problema, a su vez estos lenguajes estaban muy enfocados en la eficiencia devido al escaso poder del hardware y a las limitada capacidad de memoria.
-Con el paso de los años el software comenzo a ser un poco mas comercial y eran utilizados por compañias, por lo que surgieron lenguajes mas enfocados a la fácil mantención del codigo antes que en la eficiencia, esto provocado en parte porque el hardware empezaba a evolucionar de maneras rapidas.
+En sus principios los lenguajes de programación eran creados solo para resolver un único problema y luego de eso se paraba su desarrollo y su uso, esto se debía a que el mismo creador del lenguaje era el único o uno de los pocos que lo utilizaba para resolver un determinado problema, a su vez estos lenguajes estaban muy enfocados en la eficiencia debido al escaso poder del hardware y a la limitada capacidad de memoria.
+Con el paso de los años el software comenzó a ser un poco más comercial y eran utilizados por compañías, por lo que surgieron lenguajes más enfocados a la fácil mantención del código antes que en la eficiencia, esto provocado en parte porque el hardware empezaba a evolucionar de maneras rápidas.
 Cuando se empezaron a crear programas para áreas más criticas como una maquina que mide el pulso o un medidor de altitud para aviones se opto por lenguajes que otorquen mas confiabilidad y rebustez, de ese modo se empezaron a introducir a los lenguajes de programación el concepto de encapsulamiento y de protección en los datos.
 Ya mas adelante cuando surge la crisis de software y se empezaron a implementar las primeras metodologias en la contrucción de programas, los lenguajes comenzaron a optar por enfocarse en brindar al usuario la mayor agilidad a la hora de construir un sistema de software, a su vez que tambien se subdividieron por paradigmas a estos mismos, segun las caracteristicas que este brinde.
 
